--- a/frames/frameNAV.html
+++ b/frames/frameNAV.html
@@ -45,7 +45,6 @@
         width: 100%;
       }
 
-
       .list_item:hover {
         background-color: #7c99ac;
         cursor: pointer;
@@ -61,7 +60,7 @@
           class="list_item_link"
           href="/frames/framesContent/frameFirst.html"
           target="CONTENT"
-          >First</a
+          >Laba 1</a
         >
       </li>
       <li class="list_item">
@@ -69,7 +68,7 @@
           class="list_item_link"
           href="/frames/framesContent/frameSecond.html"
           target="CONTENT"
-          >Second</a
+          >Laba 2</a
         >
       </li>
       <li class="list_item">
@@ -77,15 +76,7 @@
           class="list_item_link"
           href="/frames/framesContent/frameThird.html"
           target="CONTENT"
-          >Third</a
-        >
-      </li>
-      <li class="list_item">
-        <a
-          class="list_item_link"
-          href="/frames/framesContent/frameFourth.html"
-          target="CONTENT"
-          >Fourth</a
+          >Laba 3</a
         >
       </li>
     </ul>
