--- a/frames/framesContent/frameSecond.html
+++ b/frames/framesContent/frameSecond.html
@@ -5,47 +5,107 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base target="content" />
+    <link rel="stylesheet" href="second_frame.css" />
     <title>Document</title>
-    <style>
-      body {
-        background-color: #d3c8de;
-        text-align: center;
-      }
-      .first {
-        color: blue;
-        font-size: 38px;
-        font-family: Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif;
-      }
-      .second {
-        color: purple;
-        font-size: 18px;
-        font-family: Impact, fantasy;
-      }
-      .third {
-        color: red;
-        font-size: 32px;
-        font-family: Brush Script MT, Brush Script Std, cursive;
-      }
-      .fourth {
-        color: seagreen;
-        font-size: 24px;
-        font-family: Trattatello, fantasy;
-      }
-    </style>
   </head>
-  <body>
-    <h2
-      style="
-        text-align: start;
-        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-          'Lucida Sans', Arial, sans-serif;
-      "
-    >
-      Diffrent color, size and style exmple:
-    </h2>
-    <h2 class="first">Basketball</h2>
-    <h2 class="second">Basketball</h2>
-    <h2 class="third">Basketball</h2>
-    <h2 class="fourth">Basketball</h2>
+  <body style="background-color: bisque">
+    <table class="table">
+      <tr style="background-color: rgb(27, 39, 39)">
+        <th>--------</th>
+        <th>Lebron James</th>
+        <th>Stephen curry</th>
+        <th>Kevin Durant</th>
+        <th>James Harden</th>
+        <th>Kawaii Leonard</th>
+      </tr>
+      <tr>
+        <td><b>Points</b></td>
+        <td>36500</td>
+        <td>19745</td>
+        <td>24936</td>
+        <td>23035</td>
+        <td>11,085</td>
+      </tr>
+      <tr>
+        <td><b>Assists</b></td>
+        <td>9948</td>
+        <td>5310</td>
+        <td>3888</td>
+        <td>6177</td>
+        <td>1672</td>
+      </tr>
+      <tr>
+        <td><b>Rebounds</b></td>
+        <td>10052</td>
+        <td>3779</td>
+        <td>6506</td>
+        <td>5145</td>
+        <td>3689</td>
+      </tr>
+      <tr>
+        <td><b>Stills</b></td>
+        <td>2126</td>
+        <td>1355</td>
+        <td>1001</td>
+        <td>1423</td>
+        <td>1013</td>
+      </tr>
+      <tr>
+        <td><b>Blocks</b></td>
+        <td>1022</td>
+        <td>185</td>
+        <td>1020</td>
+        <td>507</td>
+        <td>367</td>
+      </tr>
+      <tr>
+        <td><b>Blocks</b></td>
+        <td>1022</td>
+        <td>185</td>
+        <td>1020</td>
+        <td>507</td>
+        <td>367</td>
+      </tr>
+      <tr>
+        <td><b>MVP</b></td>
+        <td colspan="1">4</td>
+        <td colspan="1">2</td>
+        <td colspan="3">1</td>
+      </tr>
+    </table>
+    <hr />
+
+    <div class="main">
+      <div class="first main_inside">
+        <div class="first_inside a"></div>
+        <div class="first_inside b"></div>
+        <div class="first_inside c">
+          <div class="first_inside_inside"></div>
+          <div class="first_inside_inside"></div>
+        </div>
+      </div>
+      <div class="second main_inside">
+        <div class="second_inside"></div>
+        <div class="second_inside"></div>
+        <div class="second_inside"></div>
+        <div class="second_inside"></div>
+      </div>
+
+      <div class="third main_inside">
+        <div class="third_inside d"></div>
+        <div class="third_inside e">
+          <div class="third_inside_inside f"></div>
+          <div class="third_inside_inside g"></div>
+        </div>
+      </div>
+      <div class="first main_inside">
+        <div class="first_inside c">
+          <div class="first_inside_inside"></div>
+          <div class="first_inside_inside"></div>
+        </div>
+        <div class="first_inside a"></div>
+        <div class="first_inside b"></div>
+        
+    </div>
   </body>
 </html>
