--- a/frames/framesContent/frameThird.html
+++ b/frames/framesContent/frameThird.html
@@ -6,39 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base target="content" />
     <title>Document</title>
-    <style>
-      body {
-        background-color: #8bc480;
-      }
-      .img_div {
-        margin: 0 auto;
-        width: fit-content;
-      }
-      img {
-        width: 300px;
-        height: 300px;
-        border: 3px solid purple;
-      }
-    </style>
+    <link rel="stylesheet" href="third_frame.css" />
   </head>
-  <body>
-    <h2
-      style="
-        text-align: start;
-        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-          'Lucida Sans', Arial, sans-serif;
-      "
-    >
-      Img example:
-    </h2>
-    <div class="img_div">
-      <img
-        src="https://mir-s3-cdn-cf.behance.net/project_modules/disp/6bc8b511817593.56252e5431216.jpg"
-      />
-      <img
-        src="https://i.pinimg.com/736x/0b/d8/fc/0bd8fc16dd073a57f2fa1ecb870dd1ba.jpg"
-      />
-      <img src="/images/photo_2022-01-10_16-52-36.jpg" />
-    </div>
-  </body>
+  <body></body>
 </html>
