--- a/frames/framesContent/frameThird.html
+++ b/frames/framesContent/frameThird.html
@@ -8,5 +8,33 @@
     <title>Document</title>
     <link rel="stylesheet" href="third_frame.css" />
   </head>
-  <body></body>
+  <body>
+    <h1>Basketball 1</h1>
+    <h2>Basketball 2</h2>
+    <h3>Basketball 3</h3>
+    <h4>Basketball 4</h4>
+    <h5>Basketball 5</h5>
+    <h6>Basketball 6</h6>
+    <b>Basketball</b>
+    <em>Basketball</em>
+    <i>Basketball</i>
+    <small>Basketball</small>
+    <strong>Basketball</strong>
+    <sub>Basketball</sub>
+    <sup>Basketball</sup>
+    <ins>Basketball</ins>
+    <del>Basketball</del>
+    <mark>Basketball</mark>
+    <hr />
+    <span class="a1 text">Basketball</span>
+    <span class="a2 text">Basketball</span>
+    <span class="a3 text">Basketball</span>
+    <span class="a4 text">Basketball</span>
+    <span class="a5 text">Basketball</span>
+    <span class="a6 text">Basketball</span>
+    <span class="a7 text">Basketball</span>
+    <span class="a8 text">Basketball</span>
+    <span class="a9 text">Basketball</span>
+    <span class="a0 text">Basketball</span>
+  </body>
 </html>
